--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -69,6 +69,11 @@
 				"uri": "model/facturas.json"
 			}
 		},
+		"resources": {
+				"css": [{
+					"uri": "css/style.css"
+				}]
+		},
 		"routing": {
 			"config": {
 				"routerClass": "sap.m.routing.Router",
@@ -83,7 +88,7 @@
 				"name": "overview",
 				"target": "overview"
 			}, {
-				"pattern": "detail",
+				"pattern": "detail/{pruebaPath}",
 				"name": "detail",
 				"target": "detail"
 			}],
