Copia seguridad, antes de cambios en recuperación de los JSON

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -67,6 +67,11 @@
 			"prueba": {
 				"type": "sap.ui.model.json.JSONModel",
 				"uri": "model/facturas.json"
+			},
+			"jsonWEB":
+			{
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "http://brait.es/scpdev/facturas.json"
 			}
 		},
 		"resources": {
