Lectura de JSON mediante URL
Dependencia de lectura creada en Manifest

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -71,7 +71,7 @@
 			"jsonWEB":
 			{
 				"type": "sap.ui.model.json.JSONModel",
-				"uri": "http://brait.es/scpdev/facturas.json"
+				"uri": "https://brait.cc/scpdev/facturas.json"
 			}
 		},
 		"resources": {
