--- a/sap.f.tutorial.fiori.2.01/webapp/manifest.json
+++ b/sap.f.tutorial.fiori.2.01/webapp/manifest.json
@@ -3,19 +3,41 @@
 	"sap.app": {
 		"id": "sap.ui.demo.fiori2",
 		"type": "application",
+		"title": "{{appTitle}}",
 		"applicationVersion": {
 			"version": "1.0.0"
 		}
 	},
 	"sap.ui5": {
+		"rootView": {
+			"viewName": "sap.ui.demo.fiori2.view.App",
+			"type": "XML",
+			"async": false,
+			"id": "fcl"
+		},
 		"dependencies": {
 			"minUI5Version": "1.60.0",
 			"libs": {
-				"sap.ui.core": {}
+				"sap.ui.core": {},
+				"sap.f": {},
+				"sap.m": {}
 			}
 		},
 		"config": {
 			"fullWidth": true
+		},
+		"contentDensities": {
+			"compact": true,
+			"cozy": false
+		},
+		"flexEnabled": true
+	},
+	"sap.ui": {
+		"technology": "UI5",
+		"deviceTypes": {
+			"desktop": false,
+			"tablet": false,
+			"phone": false
 		}
 	}
 }
