"Step 5: Using Object Page Layout as a Detail Page": Completado sin errores  :white_check_mark:

--- a/sap.f.tutorial.fiori.2.01/webapp/manifest.json
+++ b/sap.f.tutorial.fiori.2.01/webapp/manifest.json
@@ -20,7 +20,8 @@
 			"libs": {
 				"sap.ui.core": {},
 				"sap.f": {},
-				"sap.m": {}
+				"sap.m": {},
+				"sap.uxap": {}
 			}
 		},
 		"config": {
