"Step 9: Adding a Detail-Detail Page": Completado sin errores  :white_check_mark:

--- a/sap.f.tutorial.fiori.2.01/webapp/manifest.json
+++ b/sap.f.tutorial.fiori.2.01/webapp/manifest.json
@@ -48,7 +48,16 @@
 				"pattern": "detail/{product}/{layout}",
 				"name": "detail",
 				"target": ["master", "detail"]
-			}],
+			},{
+					"pattern": "detail/{product}/detailDetail/{supplier}/{layout}",
+					"name": "detailDetail",
+					"target": [
+						"master",
+						"detail",
+						"detailDetail"
+					]
+				}
+			],
 			"targets": {
 				"master": {
 					"viewName": "Master",
@@ -57,6 +66,10 @@
 				"detail": {
 					"viewName": "Detail",
 					"controlAggregation": "midColumnPages"
+				},
+				"detailDetail": {
+					"viewName": "DetailDetail",
+					"controlAggregation": "endColumnPages"
 				}
 			}
 		},
