"Step 5" Unificando en App principal ↩️

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -41,7 +41,8 @@
 				},
 				"sap.ui.layout": {
 					"minVersion": "1.34.0"
-				},"sap.f": {}
+				},"sap.f": {},
+				"sap.uxap": {}
 			}
 		},
 		"contentDensities": {
