:warning: No funciona navegación a la otra ruta :warning:

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -87,20 +87,41 @@
 				"controlAggregation": "pages",
 				"async": true
 			},
-			"routes": [{
+			"routes": [
+			{
 				"pattern": "",
 				"name": "overview",
 				"target": "overview"
-			}, {
+			}, 
+			{
 				"pattern": "users",
 				"name": "users",
 				"target": "users"
-			}, {
+			}, 
+			{
 				"pattern": "detail/{pruebaPath}",
 				"name": "detail",
 				"target": "detail"
-			}],
-			"targets": {
+			},
+			{
+				"pattern": ":layout:",
+				"name": "master",
+				"target": [
+					"master",
+					"fioridetail"
+				]
+			},
+			{
+				"pattern": "fioridetail/{product}/{layout}",
+				"name": "fioridetail",
+				"target": [
+					"master",
+					"fioridetail"
+				]
+			}
+			],
+			"targets": 
+			{
 				"overview": {
 					"viewID": "overview",
 					"viewName": "Overview"
@@ -112,6 +133,14 @@
 				"users": {
 					"viewName": "UsersSQL",
 					"viewType": "JS"
+				},
+				"master": {
+					"viewName": "Fiori_Master",
+					"controlAggregation": "beginColumnPages"
+				},
+				"fioridetail": {
+					"viewName": "Fiori_Detail",
+					"controlAggregation": "midColumnPages"
 				}
 			}
 		}
