:warning: No funciona :warning:

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -89,7 +89,7 @@
 			},
 			"routes": [
 			{
-				"pattern": "",
+				"pattern": "overview",
 				"name": "overview",
 				"target": "overview"
 			}, 
