Cambio en manifest

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -88,7 +88,7 @@
 				"async": true
 			},
 			"routes": [{
-				"pattern": "",
+				"pattern": ":layout:",
 				"name": "overview",
 				"target": "overview"
 			}, {
