:warning: sigue sin funcionar, pero la solución esta en cambiar las rutas por rutas con conexión httpS y cambiar puerto

--- a/Odata.V4/webapp/manifest.json
+++ b/Odata.V4/webapp/manifest.json
@@ -12,11 +12,7 @@
 		"dataSources": {
 			"ZMIS_TEXTOS_SRV": {
 				"uri": "http://192.168.5.151:8000/sap/opu/odata/sap/ZMIS_TEXTOS_SRV/",
-				"type": "OData",
-				"settings": {
-					"uri": "http://192.168.5.151:8000/sap/opu/odata/sap/ZMIS_TEXTOS_SRV/$metadata?",
-					"annotations": []
-				}
+				"type": "OData"
 			}
 		},
 		"sourceTemplate": {
