--- a/Odata.V4/webapp/manifest.json
+++ b/Odata.V4/webapp/manifest.json
@@ -11,8 +11,11 @@
 		"description": "{{appDescription}}",
 		"dataSources": {
 			"ZMIS_TEXTOS_SRV": {
-				"uri": "https://192.168.5.151:5200/sap/opu/odata/sap/ZMIS_TEXTOS_SRV/",
-				"type": "OData"
+				"uri": "/sap/opu/odata/sap/ZMIS_TEXTOS_SRV/",
+				"type": "OData",
+				"settings": {
+					"localUri": "localService/metadata.xml"
+				}
 			}
 		},
 		"sourceTemplate": {
@@ -62,6 +65,16 @@
 					"defaultCountMode": "Request"
 				},
 				"dataSource": "ZMIS_TEXTOS_SRV"
+			},
+			"": {
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"settings": {
+					"defaultOperationMode": "Server",
+					"defaultBindingMode": "OneWay",
+					"defaultCountMode": "Request"
+				},
+				"dataSource": "ZMIS_TEXTOS_SRV",
+				"preload": true
 			}
 		},
 		"flexEnabled": true
