--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ AppVariant_index.html
 APIExternalProducer.js
 .*/APIExternalProducer.js
 /.user.project.json
+AppVariantPreviewPayload.zip
+mergedManifestDescriptor.json
+/mta_archives/
